--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
 			<li action="openAllInNewWindow" for="folder"><span i18n="openAllBookmarksInNewWindow" class="noicon"></span></li>
 			<li action="openAllInIncognitoWindow" for="folder"><span i18n="openAllBookmarksInIncognitoWindow"><img src="icons/window-incognito.png"/></span></li>
 			<li class="separator"></li>
-			<li action="cut" class="enabled"><span class="noicon">Cut</span></li>
-			<li action="copy" class="enabled"><span class="noicon">Copy</span></li>
-			<li action="paste" class="enabled"><span class="noicon">Paste</span></li>
+            <li action="cut" class="enabled"><span i18n="cut"><img src="icons/cut.png"/></span></li>
+			<li action="copy" class="enabled"><span i18n="copy"><img src="icons/copy.png"/></span></li>
+			<li action="paste" class="enabled"><span i18n="paste"><img src="icons/paste.png"/></span></li>
 			<li action="reorder"><span i18n="reorder"><img src="icons/reorder.png"/></span></li>
 			<li action="addGBookmark" class="enabled"><span i18n="addBookmark"><img src="icons/icon-16.png"/></span></li>
 			<li action="remove"><span i18n="remove"><img src="icons/icon_delete.png"/></span></li>
