Changed items in context menu

--- a/popup.html
+++ b/popup.html
@@ -20,9 +20,11 @@
             <li action="cut" class="enabled"><span i18n="cut"><img src="icons/cut.png"/></span></li>
 			<li action="copy" class="enabled"><span i18n="copy"><img src="icons/copy.png"/></span></li>
 			<li action="paste" class="enabled"><span i18n="paste"><img src="icons/paste.png"/></span></li>
-			<li action="reorder"><span i18n="reorder"><img src="icons/reorder.png"/></span></li>
+			<li class="separator"></li>
 			<li action="addGBookmark" class="enabled"><span i18n="addBookmark"><img src="icons/icon-16.png"/></span></li>
 			<li action="remove"><span i18n="remove"><img src="icons/icon_delete.png"/></span></li>
+			<li class="separator"></li>
+			<li action="reorder"><span i18n="reorder"><img src="icons/reorder.png"/></span></li>
 			<li class="separator"></li>
 			<li action="reload" class="enabled"><span i18n="reloadGBookmarks"><img src="icons/refresh.png"/></span></li>
 			<li action="useGoogleBookmarks" class="enabled"><span class="noicon" i18n="tbUseGoogle"></span></li>
